{
  "version": 4,
  "terraform_version": "1.14.3",
  "serial": 1738,
  "lineage": "730492f9-f768-0064-8acc-34fc0d6f4e52",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "bos_nat_eip01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3a64858fc054bd2",
            "arn": "arn:aws:ec2:us-east-1:891377135193:elastic-ip/eipalloc-0a3a64858fc054bd2",
            "association_id": "eipassoc-0ddf10476d9f7566d",
            "domain": "vpc",
            "id": "eipalloc-0a3a64858fc054bd2",
            "network_border_group": "us-east-1",
            "network_interface": "eni-0c0e12b91b1310162",
            "private_dns": "ip-10-26-1-221.ec2.internal",
            "private_ip": "10.26.1.221",
            "public_dns": "ec2-54-84-139-26.compute-1.amazonaws.com",
            "public_ip": "54.84.139.26",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-nat-eip01"
            },
            "tags_all": {
              "Name": "bos-nat-eip01"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bos_ec201",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:891377135193:instance/i-0e1967f6a74e1d324",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bos-instance-profile01",
            "id": "i-0e1967f6a74e1d324",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-088222062c20a2485"
              }
            ],
            "primary_network_interface_id": "eni-088222062c20a2485",
            "private_dns": "ip-10-26-1-11.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.26.1.11",
            "public_dns": "ec2-54-235-55-174.compute-1.amazonaws.com",
            "public_ip": "54.235.55.174",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0cb66ff473acd0bad",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-01a9e5dc97f04de96",
            "tags": {
              "Name": "bos-ec201"
            },
            "tags_all": {
              "Name": "bos-ec201"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-061584391e9315c07"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "i-0e1967f6a74e1d324",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "bos_ec201_private_bonus",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "ami": "ami-068c0051b15cdb816",
            "arn": "arn:aws:ec2:us-east-1:891377135193:instance/i-0024f12052994ff08",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "force_destroy": false,
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "bos-instance-profile01",
            "id": "i-0024f12052994ff08",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface": [
              {
                "delete_on_termination": true,
                "network_interface_id": "eni-0f5a389efcbe9d115"
              }
            ],
            "primary_network_interface_id": "eni-0f5a389efcbe9d115",
            "private_dns": "ip-10-26-101-87.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.26.101.87",
            "region": "us-east-1",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-0466e3c31f1539f8f",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a994c748a10fa54b",
            "tags": {
              "Name": "bos-ec201-private"
            },
            "tags_all": {
              "Name": "bos-ec201-private"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-061584391e9315c07"
            ]
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "i-0024f12052994ff08",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "bos_igw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:internet-gateway/igw-00f299fdc634b799c",
            "id": "igw-00f299fdc634b799c",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-igw01"
            },
            "tags_all": {
              "Name": "bos-igw01"
            },
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "bos_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "bucket": "bos-alb-logs-891377135193",
                "enabled": false,
                "prefix": "alb-logs"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/52a5989d26150f86",
            "arn_suffix": "app/bos-alb01/52a5989d26150f86",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "bos-alb01-1092421058.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "health_check_logs": [
              {
                "enabled": false
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/52a5989d26150f86",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "bos-alb01",
            "preserve_host_header": false,
            "region": "us-east-1",
            "security_groups": [
              "sg-0a0b0db6a140e69fc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01a9e5dc97f04de96"
              },
              {
                "subnet_id": "subnet-08efcd432b8e9ea32"
              }
            ],
            "subnets": [
              "subnet-01a9e5dc97f04de96",
              "subnet-08efcd432b8e9ea32"
            ],
            "tags": {
              "Name": "bos-alb01"
            },
            "tags_all": {
              "Name": "bos-alb01"
            },
            "vpc_id": "vpc-09b198be32272cd10",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/52a5989d26150f86"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bos_http_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/52a5989d26150f86/a91242c24b59a7dc",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [
                  {
                    "host": "#{host}",
                    "path": "/#{path}",
                    "port": "443",
                    "protocol": "HTTPS",
                    "query": "#{query}",
                    "status_code": "HTTP_301"
                  }
                ],
                "target_group_arn": "",
                "type": "redirect"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/52a5989d26150f86/a91242c24b59a7dc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/52a5989d26150f86",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/52a5989d26150f86/a91242c24b59a7dc"
          },
          "dependencies": [
            "aws_lb.bos_alb01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "bos_https_listener01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/52a5989d26150f86/a1c358f779934e3d",
            "certificate_arn": "arn:aws:acm:us-east-1:891377135193:certificate/7ff3fcc1-60cb-458c-86ab-b647e0f0c5e2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "jwt_validation": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/39ad930500765dc9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/52a5989d26150f86/a1c358f779934e3d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/52a5989d26150f86",
            "mutual_authentication": [
              {
                "advertise_trust_store_ca_names": "",
                "ignore_client_certificate_expiry": false,
                "mode": "off",
                "trust_store_arn": ""
              }
            ],
            "port": 443,
            "protocol": "HTTPS",
            "region": "us-east-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": "",
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": "",
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": "",
            "routing_http_request_x_amzn_tls_version_header_name": "",
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "ELBSecurityPolicy-TLS13-1-2-2021-06",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:listener/app/bos-alb01/52a5989d26150f86/a1c358f779934e3d"
          },
          "dependencies": [
            "aws_acm_certificate.larrryharrisaws_cert",
            "aws_acm_certificate_validation.larrryharrisaws_acm_validation01_dns_bonus",
            "aws_lb.bos_alb01",
            "aws_lb_target_group.bos_tg01",
            "aws_route53_record.larrryharrisaws_acm_validation_records01",
            "aws_route53_zone.larrryharrisaws_zone01",
            "aws_security_group.bos_alb_sg01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "bos_tg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/39ad930500765dc9",
            "arn_suffix": "targetgroup/bos-tg01/39ad930500765dc9",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200-399",
                "path": "/health",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/39ad930500765dc9",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:us-east-1:891377135193:loadbalancer/app/bos-alb01/52a5989d26150f86"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "bos-tg01",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "us-east-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "bos-tg01"
            },
            "tags_all": {
              "Name": "bos-tg01"
            },
            "target_control_port": 0,
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/39ad930500765dc9"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "bos_tg_attach01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/39ad930500765dc9-20260115133839395500000010",
            "port": 80,
            "region": "us-east-1",
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:891377135193:targetgroup/bos-tg01/39ad930500765dc9",
            "target_id": "i-0024f12052994ff08"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_iam_instance_profile.bos_instance_profile01",
            "aws_iam_role.bos_ec2_role01",
            "aws_instance.bos_ec201_private_bonus",
            "aws_lb_target_group.bos_tg01",
            "aws_security_group.bos_ec2_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "bos_nat01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0a3a64858fc054bd2",
            "association_id": "eipassoc-0ddf10476d9f7566d",
            "availability_mode": "zonal",
            "connectivity_type": "public",
            "id": "nat-01ef16cacd7ed0a2e",
            "network_interface_id": "eni-0c0e12b91b1310162",
            "private_ip": "10.26.1.221",
            "public_ip": "54.84.139.26",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-01a9e5dc97f04de96",
            "tags": {
              "Name": "bos-nat01"
            },
            "tags_all": {
              "Name": "bos-nat01"
            },
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.bos_nat_eip01",
            "aws_internet_gateway.bos_igw01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bos_private_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0517201f5f909fec81080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-01ef16cacd7ed0a2e",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0517201f5f909fec8",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-0517201f5f909fec8"
          },
          "dependencies": [
            "aws_eip.bos_nat_eip01",
            "aws_internet_gateway.bos_igw01",
            "aws_nat_gateway.bos_nat01",
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "bos_public_default_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-00f299fdc634b799c",
            "id": "r-rtb-08ceca0a6a9d6852b1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-08ceca0a6a9d6852b",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": null,
            "destination_prefix_list_id": null,
            "region": "us-east-1",
            "route_table_id": "rtb-08ceca0a6a9d6852b"
          },
          "dependencies": [
            "aws_internet_gateway.bos_igw01",
            "aws_route_table.bos_public_rt01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bos_private_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:route-table/rtb-0517201f5f909fec8",
            "id": "rtb-0517201f5f909fec8",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-01ef16cacd7ed0a2e",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bos-private-rt01"
            },
            "tags_all": {
              "Name": "bos-private-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-0517201f5f909fec8",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "bos_public_rt01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:route-table/rtb-08ceca0a6a9d6852b",
            "id": "rtb-08ceca0a6a9d6852b",
            "owner_id": "891377135193",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-00f299fdc634b799c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bos-public-rt01"
            },
            "tags_all": {
              "Name": "bos-public-rt01"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "rtb-08ceca0a6a9d6852b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bos_private_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03ef2f8d0438f2231",
            "region": "us-east-1",
            "route_table_id": "rtb-0517201f5f909fec8",
            "subnet_id": "subnet-0a994c748a10fa54b"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01431c02929660afd",
            "region": "us-east-1",
            "route_table_id": "rtb-0517201f5f909fec8",
            "subnet_id": "subnet-05897c23aabca60ff"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "bos_public_rta",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023fd9cdef906dc7e",
            "region": "us-east-1",
            "route_table_id": "rtb-08ceca0a6a9d6852b",
            "subnet_id": "subnet-01a9e5dc97f04de96"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_public_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05b6aa52dda5737d5",
            "region": "us-east-1",
            "route_table_id": "rtb-08ceca0a6a9d6852b",
            "subnet_id": "subnet-08efcd432b8e9ea32"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_route_table.bos_public_rt01",
            "aws_subnet.bos_public_subnets",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_alb_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-0a0b0db6a140e69fc",
            "description": "ALB security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a0b0db6a140e69fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 80
              }
            ],
            "name": "bos-alb-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-alb-sg01"
            },
            "tags_all": {
              "Name": "bos-alb-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0a0b0db6a140e69fc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_ec2_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-061584391e9315c07",
            "description": "EC2 app security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-061584391e9315c07",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "bos-ec2-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-ec2-sg01"
            },
            "tags_all": {
              "Name": "bos-ec2-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-061584391e9315c07",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_rds_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-0f30a591645530f17",
            "description": "RDS security group",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f30a591645530f17",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow MySQL access only from app tier EC2 instances",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061584391e9315c07"
                ],
                "self": false,
                "to_port": 3306
              }
            ],
            "name": "bos-rds-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-rds-sg01"
            },
            "tags_all": {
              "Name": "bos-rds-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-0f30a591645530f17",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "bos_vpce_sg01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group/sg-08027c61e9b09ea88",
            "description": "SG for VPC Interface Endpoints",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08027c61e9b09ea88",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow EC2 SG access only for 443",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-061584391e9315c07"
                ],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "bos-vpce-sg01",
            "name_prefix": "",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bos-vpce-sg01"
            },
            "tags_all": {
              "Name": "bos-vpce-sg01"
            },
            "timeouts": null,
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sg-08027c61e9b09ea88",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "bos_ec2_ingress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": null,
            "from_port": 80,
            "id": "sgrule-2634133585",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0a0b0db6a140e69fc",
            "security_group_rule_id": "sgr-0f90e384fe3f6f87b",
            "self": false,
            "source_security_group_id": "sg-0a0b0db6a140e69fc",
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bos_private_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-0a994c748a10fa54b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.26.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a994c748a10fa54b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-private-subnet01"
            },
            "tags_all": {
              "Name": "bos-private-subnet01"
            },
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-0a994c748a10fa54b",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-05897c23aabca60ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.26.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05897c23aabca60ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-private-subnet02"
            },
            "tags_all": {
              "Name": "bos-private-subnet02"
            },
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-05897c23aabca60ff",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "bos_public_subnets",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-01a9e5dc97f04de96",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.26.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-01a9e5dc97f04de96",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-public-subnet01"
            },
            "tags_all": {
              "Name": "bos-public-subnet01"
            },
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-01a9e5dc97f04de96",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:subnet/subnet-08efcd432b8e9ea32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.26.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08efcd432b8e9ea32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "891377135193",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-public-subnet02"
            },
            "tags_all": {
              "Name": "bos-public-subnet02"
            },
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "subnet-08efcd432b8e9ea32",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "bos_vpc01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc/vpc-09b198be32272cd10",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.26.0.0/16",
            "default_network_acl_id": "acl-00d0096360f6f0bc9",
            "default_route_table_id": "rtb-066acb4455869fb9a",
            "default_security_group_id": "sg-05c3687cd93d5e080",
            "dhcp_options_id": "dopt-01a7c7fae7f55da14",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-09b198be32272cd10",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-066acb4455869fb9a",
            "owner_id": "891377135193",
            "region": "us-east-1",
            "tags": {
              "Name": "bos-vpc01"
            },
            "tags_all": {
              "Name": "bos-vpc01"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpc-09b198be32272cd10",
            "region": "us-east-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ec2messages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-08daa085dc4c5c8b0",
            "dns_entry": [
              {
                "dns_name": "vpce-08daa085dc4c5c8b0-w5s0b20y.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08daa085dc4c5c8b0-w5s0b20y-us-east-1b.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-08daa085dc4c5c8b0-w5s0b20y-us-east-1a.ec2messages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ec2messages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z0804253GU9AI4HREFHM"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-08daa085dc4c5c8b0",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0228d0bb713d91f61",
              "eni-05ae74797b7428bfe"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08027c61e9b09ea88"
            ],
            "service_name": "com.amazonaws.us-east-1.ec2messages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.21",
                "subnet_id": "subnet-0a994c748a10fa54b"
              },
              {
                "ipv4": "10.26.102.238",
                "subnet_id": "subnet-05897c23aabca60ff"
              }
            ],
            "subnet_ids": [
              "subnet-05897c23aabca60ff",
              "subnet-0a994c748a10fa54b"
            ],
            "tags": {
              "Name": "bos-vpce-ec2messages01"
            },
            "tags_all": {
              "Name": "bos-vpce-ec2messages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-08daa085dc4c5c8b0",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_kms01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-0fec463739f82edcc",
            "dns_entry": [
              {
                "dns_name": "vpce-0fec463739f82edcc-ro86sysp.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fec463739f82edcc-ro86sysp-us-east-1a.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0fec463739f82edcc-ro86sysp-us-east-1b.kms.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "kms.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z098905022D3AGC2GKKWU"
              },
              {
                "dns_name": "kms.us-east-1.api.aws",
                "hosted_zone_id": "Z09890452WG9YWT0QJAQY"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0fec463739f82edcc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0160039c769499bf7",
              "eni-0886f22c4146c412a"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08027c61e9b09ea88"
            ],
            "service_name": "com.amazonaws.us-east-1.kms",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.51",
                "subnet_id": "subnet-0a994c748a10fa54b"
              },
              {
                "ipv4": "10.26.102.167",
                "subnet_id": "subnet-05897c23aabca60ff"
              }
            ],
            "subnet_ids": [
              "subnet-05897c23aabca60ff",
              "subnet-0a994c748a10fa54b"
            ],
            "tags": {
              "Name": "bos-vpce-kms01"
            },
            "tags_all": {
              "Name": "bos-vpce-kms01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0fec463739f82edcc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_logs01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-0b6dfab2dd789db62",
            "dns_entry": [
              {
                "dns_name": "vpce-0b6dfab2dd789db62-hdfvm7b0.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b6dfab2dd789db62-hdfvm7b0-us-east-1a.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0b6dfab2dd789db62-hdfvm7b0-us-east-1b.logs.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z03860912REHGO70DPMMF"
              },
              {
                "dns_name": "streaming-logs.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02172092JJBF3Q7YNUXS"
              },
              {
                "dns_name": "streaming-logs.us-east-1.api.aws",
                "hosted_zone_id": "Z08047382Y7NYQHDRV9YQ"
              },
              {
                "dns_name": "logs.us-east-1.api.aws",
                "hosted_zone_id": "Z101163630DZO44C4F9LG"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0b6dfab2dd789db62",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0d1ba1bb2a53767fc",
              "eni-0d55f38122e78c12a"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08027c61e9b09ea88"
            ],
            "service_name": "com.amazonaws.us-east-1.logs",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.117",
                "subnet_id": "subnet-0a994c748a10fa54b"
              },
              {
                "ipv4": "10.26.102.196",
                "subnet_id": "subnet-05897c23aabca60ff"
              }
            ],
            "subnet_ids": [
              "subnet-05897c23aabca60ff",
              "subnet-0a994c748a10fa54b"
            ],
            "tags": {
              "Name": "bos-vpce-logs01"
            },
            "tags_all": {
              "Name": "bos-vpce-logs01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0b6dfab2dd789db62",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_s3_gw01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-05f9f606935efb3ce",
            "cidr_blocks": [
              "16.15.176.0/20",
              "16.182.0.0/16",
              "18.34.0.0/19",
              "52.216.0.0/15",
              "54.231.0.0/16",
              "3.5.0.0/19",
              "18.34.232.0/21",
              "16.15.192.0/18"
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "service-defined",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05f9f606935efb3ce",
            "ip_address_type": "ipv4",
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-63a5400a",
            "private_dns_enabled": false,
            "region": "us-east-1",
            "requester_managed": false,
            "route_table_ids": [
              "rtb-0517201f5f909fec8"
            ],
            "service_name": "com.amazonaws.us-east-1.s3",
            "service_region": "us-east-1",
            "state": "available",
            "tags": {
              "Name": "bos-vpce-s3-gw01"
            },
            "tags_all": {
              "Name": "bos-vpce-s3-gw01"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-05f9f606935efb3ce",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_route_table.bos_private_rt01",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_secrets01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-099142db527f37d88",
            "dns_entry": [
              {
                "dns_name": "vpce-099142db527f37d88-zdai4zuv.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-099142db527f37d88-zdai4zuv-us-east-1b.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-099142db527f37d88-zdai4zuv-us-east-1a.secretsmanager.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "secretsmanager.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02203891W0H2N4WGUPK1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-099142db527f37d88",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-03a91a0a629c39686",
              "eni-0dcccf0d2248259bc"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08027c61e9b09ea88"
            ],
            "service_name": "com.amazonaws.us-east-1.secretsmanager",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.221",
                "subnet_id": "subnet-0a994c748a10fa54b"
              },
              {
                "ipv4": "10.26.102.190",
                "subnet_id": "subnet-05897c23aabca60ff"
              }
            ],
            "subnet_ids": [
              "subnet-05897c23aabca60ff",
              "subnet-0a994c748a10fa54b"
            ],
            "tags": {
              "Name": "bos-vpce-secrets01"
            },
            "tags_all": {
              "Name": "bos-vpce-secrets01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-099142db527f37d88",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ssm01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-00a6396e4fe30db48",
            "dns_entry": [
              {
                "dns_name": "vpce-00a6396e4fe30db48-ck1tkbir.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00a6396e4fe30db48-ck1tkbir-us-east-1a.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-00a6396e4fe30db48-ck1tkbir-us-east-1b.ssm.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssm.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z038526535L1L1LJ2YRPF"
              },
              {
                "dns_name": "ssm.us-east-1.api.aws",
                "hosted_zone_id": "Z09875731LISPY1M3K4YP"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-00a6396e4fe30db48",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-0114413af5fcfce05",
              "eni-078896ea74899f85a"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08027c61e9b09ea88"
            ],
            "service_name": "com.amazonaws.us-east-1.ssm",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.181",
                "subnet_id": "subnet-0a994c748a10fa54b"
              },
              {
                "ipv4": "10.26.102.203",
                "subnet_id": "subnet-05897c23aabca60ff"
              }
            ],
            "subnet_ids": [
              "subnet-05897c23aabca60ff",
              "subnet-0a994c748a10fa54b"
            ],
            "tags": {
              "Name": "bos-vpce-ssm01"
            },
            "tags_all": {
              "Name": "bos-vpce-ssm01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-00a6396e4fe30db48",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "bos_vpce_ssmmessages01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:vpc-endpoint/vpce-0e4cecaacab6077dc",
            "dns_entry": [
              {
                "dns_name": "vpce-0e4cecaacab6077dc-1jsc3ycc.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e4cecaacab6077dc-1jsc3ycc-us-east-1b.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "vpce-0e4cecaacab6077dc-1jsc3ycc-us-east-1a.ssmmessages.us-east-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z7HUB22UULQXV"
              },
              {
                "dns_name": "ssmmessages.us-east-1.amazonaws.com",
                "hosted_zone_id": "Z02405522C6R44HTHFILH"
              },
              {
                "dns_name": "ssmmessages.us-east-1.api.aws",
                "hosted_zone_id": "Z0988158RMUL5BMCGEZ1"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-0e4cecaacab6077dc",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-028a8d077a7c1f4f4",
              "eni-0c1b1df0ada683117"
            ],
            "owner_id": "891377135193",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": true,
            "region": "us-east-1",
            "requester_managed": false,
            "security_group_ids": [
              "sg-08027c61e9b09ea88"
            ],
            "service_name": "com.amazonaws.us-east-1.ssmmessages",
            "service_region": "us-east-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.26.101.88",
                "subnet_id": "subnet-0a994c748a10fa54b"
              },
              {
                "ipv4": "10.26.102.187",
                "subnet_id": "subnet-05897c23aabca60ff"
              }
            ],
            "subnet_ids": [
              "subnet-05897c23aabca60ff",
              "subnet-0a994c748a10fa54b"
            ],
            "tags": {
              "Name": "bos-vpce-ssmmessages01"
            },
            "tags_all": {
              "Name": "bos-vpce-ssmmessages01"
            },
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-09b198be32272cd10"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "vpce-0e4cecaacab6077dc",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_subnet.bos_private_subnets",
            "aws_vpc.bos_vpc01",
            "data.aws_region.bos_region01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bos_alb_all_traffic",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-09b77f9ed45a77c5e",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-09b77f9ed45a77c5e",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0f30a591645530f17",
            "security_group_rule_id": "sgr-09b77f9ed45a77c5e",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-09b77f9ed45a77c5e",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_rds_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "bos_ec2_egress_from_alb01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-03fbdd3c9023178fd",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-03fbdd3c9023178fd",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a0b0db6a140e69fc",
            "security_group_rule_id": "sgr-03fbdd3c9023178fd",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-03fbdd3c9023178fd",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ec2_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-071cb168a7e2c7c85",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-071cb168a7e2c7c85",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-061584391e9315c07",
            "security_group_rule_id": "sgr-071cb168a7e2c7c85",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-071cb168a7e2c7c85",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "vpce_all_traffic_ipv4",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-02ddb62eee8fbdc73",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": "Allow all outbound traffic",
            "from_port": null,
            "id": "sgr-02ddb62eee8fbdc73",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-08027c61e9b09ea88",
            "security_group_rule_id": "sgr-02ddb62eee8fbdc73",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-02ddb62eee8fbdc73",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_vpce_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_alb_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0397e067dbac846d7",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-0397e067dbac846d7",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a0b0db6a140e69fc",
            "security_group_rule_id": "sgr-0397e067dbac846d7",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0397e067dbac846d7",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_alb_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-02ba41279b702f5d1",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 443,
            "id": "sgr-02ba41279b702f5d1",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-0a0b0db6a140e69fc",
            "security_group_rule_id": "sgr-02ba41279b702f5d1",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-02ba41279b702f5d1",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_alb_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_ec2_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-06c9af824e9346481",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": 80,
            "id": "sgr-06c9af824e9346481",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "us-east-1",
            "security_group_id": "sg-061584391e9315c07",
            "security_group_rule_id": "sgr-06c9af824e9346481",
            "tags": null,
            "tags_all": {},
            "to_port": 80
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-06c9af824e9346481",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_rds_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0230258495f262a3d",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow MySQL access only from app tier EC2 instances",
            "from_port": 3306,
            "id": "sgr-0230258495f262a3d",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-061584391e9315c07",
            "region": "us-east-1",
            "security_group_id": "sg-0f30a591645530f17",
            "security_group_rule_id": "sgr-0230258495f262a3d",
            "tags": null,
            "tags_all": {},
            "to_port": 3306
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0230258495f262a3d",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_security_group.bos_rds_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_ingress_rule",
      "name": "bos_vpce_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:891377135193:security-group-rule/sgr-0570429678a1f0ed5",
            "cidr_ipv4": null,
            "cidr_ipv6": null,
            "description": "Allow EC2 SG access only for 443",
            "from_port": 443,
            "id": "sgr-0570429678a1f0ed5",
            "ip_protocol": "tcp",
            "prefix_list_id": null,
            "referenced_security_group_id": "sg-061584391e9315c07",
            "region": "us-east-1",
            "security_group_id": "sg-08027c61e9b09ea88",
            "security_group_rule_id": "sgr-0570429678a1f0ed5",
            "tags": null,
            "tags_all": {},
            "to_port": 443
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "891377135193",
            "id": "sgr-0570429678a1f0ed5",
            "region": "us-east-1"
          },
          "dependencies": [
            "aws_security_group.bos_ec2_sg01",
            "aws_security_group.bos_vpce_sg01",
            "aws_vpc.bos_vpc01"
          ]
        }
      ]
    }
  ]
}